--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,12 @@
   <title>Final Project</title>
   <link rel="icon" href="/favicon.ico">
   <link rel="stylesheet" href="/reset.css">
+  <link rel="stylesheet" crossorigin="anonymous"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
   <link rel="stylesheet" href="/layout.css">
   <link rel="stylesheet" href="/styles.css">
 </head>
