--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurfWrite</title>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="images/surfwrite-favicon.png">
   <link rel="stylesheet" crossorigin="anonymous"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
