--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="SurfWrite">
+  <meta property="og:description" content="A web application for surfers who want to keep track and log the days they went surfing">
+  <meta property="og:image" content="https://moniquechang.github.io/SurfWrite/surfwrite-meta-tag.jpeg">
+  <meta property="og:url" content="https://surfwrite.moniquechang.com">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
   <title>SurfWrite</title>
   <link rel="icon" href="images/surfwrite-favicon.png">
   <link rel="stylesheet" crossorigin="anonymous"
