added meta tag image into images folder, edited meta tag for meta tag image

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="SurfWrite">
   <meta property="og:description" content="A web application for surfers who want to keep track and log the days they went surfing">
-  <meta property="og:image" content="https://moniquechang.github.io/SurfWrite/surfwrite-meta-tag.jpeg">
+  <meta property="og:image" content="https://surfwrite.moniquechang.com/images/surfwrite-meta-tag-image.jpeg">
   <meta property="og:url" content="https://surfwrite.moniquechang.com">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
